[gd_scene load_steps=5 format=3 uid="uid://g4fkg6rnpgqr"]

[ext_resource type="Texture2D" uid="uid://40u8nw0veh31" path="res://assets/sprites/return.png" id="1_2bjf0"]
[ext_resource type="Script" path="res://scripts/return.gd" id="1_yw1gl"]
[ext_resource type="PackedScene" uid="uid://bvqawkcoycf3e" path="res://scenes/MoveableItem.tscn" id="2_q58v3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_esm04"]
radius = 18.0

[node name="Return" type="Area2D" groups=["return"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_yw1gl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2bjf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_esm04")

[node name="MoveableItem" parent="." instance=ExtResource("2_q58v3")]

[connection signal="deleter" from="MoveableItem" to="." method="_on_moveable_item_deleter"]
[connection signal="empty" from="MoveableItem" to="." method="_on_moveable_item_empty"]
[connection signal="output" from="MoveableItem" to="." method="_on_moveable_item_output"]
